bug-1878000: upgrade Kent to 1.2.0
This upgrades Kent to 1.2.0 to pick up fixes to logging and other
things.

This also updates the Dockerfile to use the same base image Antenna
does.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,8 +102,7 @@ services:
   # https://github.com/willkg/kent
   fakesentry:
     build:
-      context: .
-      dockerfile: ./docker/Dockerfile.fakesentry
+      context: docker/images/fakesentry
     image: local/antenna_fakesentry
     ports:
       - "8090:8090"
