--- a/docker/config/local_dev.env
+++ b/docker/config/local_dev.env
@@ -16,6 +16,15 @@ STATSD_NAMESPACE=mcboatface
 CRASHMOVER_CRASHSTORAGE_CLASS=antenna.ext.s3.crashstorage.S3CrashStorage
 CRASHMOVER_CRASHPUBLISH_CLASS=antenna.ext.sqs.crashpublish.SQSCrashPublish
 
+# Pub/Sub settings
+CRASHMOVER_CRASHPUBLISH_SERVICE_ACCOUNT_FILE=
+CRASHMOVER_CRASHPUBLISH_PROJECT_ID=local-dev-socorro
+CRASHMOVER_CRASHPUBLISH_TOPIC_NAME=local_dev_socorro_standard
+CRASHMOVER_CRASHPUBLISH_SUBSCRIPTION_NAME=local_dev_socorro_sub
+
+# Set Pub/Sub library to use emulator
+PUBSUB_EMULATOR_HOST=pubsub:5010
+
 # S3 settings
 CRASHMOVER_CRASHSTORAGE_ENDPOINT_URL=http://localstack:4566
 CRASHMOVER_CRASHSTORAGE_REGION=us-east-1
