--- a/requirements.in
+++ b/requirements.in
@@ -11,6 +11,7 @@ gunicorn==21.2.0
 isodate==0.6.1
 markus==4.2.0
 sentry-sdk==1.34.0
+google-cloud-pubsub==2.19.3
 
 # Development requirements
 bandit==1.7.5
