--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - docker/config/test.env
     links:
       - fakesentry
+      - gcs-emulator
       - localstack
       - pubsub
       - statsd
@@ -53,6 +54,7 @@ services:
       - docker/config/test.env
     links:
       - fakesentry
+      - gcs-emulator
       - localstack
       - pubsub
       - statsd
@@ -79,6 +81,7 @@ services:
     command: web
     links:
       - fakesentry
+      - gcs-emulator
       - localstack
       - pubsub
       - statsd
@@ -125,3 +128,17 @@ services:
     ports:
       - "8090:8090"
     command: run --host 0.0.0.0 --port 8090
+
+  # https://github.com/fsouza/fake-gcs-server
+  # Fake GCP GCS server for local development and testing
+  gcs-emulator:
+    build:
+      context: docker/images/gcs-emulator
+    image: local/tecken_gcs_emulator
+    ports:
+      - "${EXPOSE_GCS_EMULATOR_PORT:-4443}:4443"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "--insecure", "https://localhost:4443/storage/v1/b"]
+      interval: 1s
+      timeout: 3s
+      retries: 5
