--- a/docker/config/local_dev.env
+++ b/docker/config/local_dev.env
@@ -25,6 +25,9 @@ CRASHMOVER_CRASHPUBLISH_SUBSCRIPTION_NAME=local_dev_socorro_sub
 # Set Pub/Sub library to use emulator
 PUBSUB_EMULATOR_HOST=pubsub:5010
 
+# GCS settings
+STORAGE_EMULATOR_HOST=https://gcs-emulator:4443
+
 # S3 settings
 CRASHMOVER_CRASHSTORAGE_ENDPOINT_URL=http://localstack:4566
 CRASHMOVER_CRASHSTORAGE_REGION=us-east-1
