--- a/requirements.in
+++ b/requirements.in
@@ -7,6 +7,7 @@ dockerflow==2022.8.0
 everett==3.2.0
 falcon==3.1.1
 fillmore==1.1.0
+google-cloud-storage
 gunicorn==21.2.0
 isodate==0.6.1
 markus==4.2.0
