bug-1881575: support storing crashes in gcs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,7 @@ services:
     env_file:
       - docker/config/local_dev.env
       - docker/config/test.env
+      - my.env
     links:
       - fakesentry
       - gcs-emulator
@@ -67,6 +68,7 @@ services:
       # exclude docker/config/test.env because this will be used for systemtest
       # which requires store and publish to actually happen
       - docker/config/local_dev.env
+      - my.env
     command: web
 
   # Web container is a prod-like fully-functioning Antenna container
