--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,13 +85,16 @@ jobs:
             docker compose run --rm ci shell bash -c 'cd systemtest && NGINX_TESTS=0 POST_CHECK=1 HOST=http://ci-web:8000 pytest -vv'
 
       - run:
-          name: Run systemtest with pubsub
+          name: Run systemtest with pubsub and gcs
           command: |
             echo 'CRASHMOVER_CRASHPUBLISH_CLASS=antenna.ext.pubsub.crashpublish.PubSubCrashPublish' >> my.env
+            echo 'CRASHMOVER_CRASHSTORAGE_CLASS=antenna.ext.gcs.crashstorage.GcsCrashStorage' >> my.env
             docker compose run --rm ci shell ./bin/run_setup.sh
             docker compose up --detach --wait --wait-timeout=10 ci-web
             docker compose run --rm ci shell bash -c 'cd systemtest && NGINX_TESTS=0 POST_CHECK=1 HOST=http://ci-web:8000 pytest -vv'
-            sed '$d' -i my.env # remove config on last line
+            # remove config on last two lines
+            sed '$d' -i my.env
+            sed '$d' -i my.env
 
       - run:
           name: Push to Dockerhub
