--- a/docker/config/local_dev.env
+++ b/docker/config/local_dev.env
@@ -25,6 +25,13 @@ CRASHMOVER_CRASHPUBLISH_SUBSCRIPTION_NAME=local_dev_socorro_sub
 # Set Pub/Sub library to use emulator
 PUBSUB_EMULATOR_HOST=pubsub:5010
 
+# GCS settings
+CRASHMOVER_CRASHSTORAGE_GCS_BUCKET_NAME=antennabucket
+
+# Set GCS library to use emulator
+# This has to be an https url or google_cloud_storage won't work
+STORAGE_EMULATOR_HOST=http://gcs-emulator:8001
+
 # S3 settings
 CRASHMOVER_CRASHSTORAGE_ENDPOINT_URL=http://localstack:4566
 CRASHMOVER_CRASHSTORAGE_REGION=us-east-1
