bug-1850980: Upgrade to python 3.11

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ testpaths = tests/unittest/
 
 filterwarnings =
     error
+    ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning:falcon
     # sentry-sdk has a Falcon integration that needs some help and is currently
     # using a thing in Falcon that kicks up a DeprecatedWarning
     ignore:The api_helpers module.*:falcon.util.deprecation.DeprecatedWarning
