--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,5 @@
-# This should be kept in sync with the python version used in docker/Dockerfile
+# This should be kept in sync with the python version used in docker/Dockerfile and
+# docker/images/fakesentry/Dockerfile
 FROM mcr.microsoft.com/devcontainers/python:3.11-bullseye@sha256:105bf6a63ab025206f019a371a735fec6553db0be520030c7a2fd0e002947232
 
 ARG userid=10001
