bug-1850980: Upgrade to python 3.11 (#978)

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,6 @@
-FROM mcr.microsoft.com/devcontainers/python:3.10-bullseye@sha256:a95bd841ad4b801a5e0c4ba183aaccefd8d1e65a3dab2116aa7b385bd70135e2
+# This should be kept in sync with the python version used in docker/Dockerfile and
+# docker/images/fakesentry/Dockerfile
+FROM mcr.microsoft.com/devcontainers/python:3.11-bullseye@sha256:105bf6a63ab025206f019a371a735fec6553db0be520030c7a2fd0e002947232
 
 ARG userid=10001
 ARG groupid=10001
