bug-1878423: restore google pub/sub support (#974)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,6 +85,15 @@ jobs:
             docker compose run --rm ci shell bash -c 'cd systemtest && NGINX_TESTS=0 POST_CHECK=1 HOST=http://ci-web:8000 pytest -vv'
 
       - run:
+          name: Run systemtest with pubsub
+          command: |
+            echo 'CRASHMOVER_CRASHPUBLISH_CLASS=antenna.ext.pubsub.crashpublish.PubSubCrashPublish' >> my.env
+            docker compose run --rm ci shell ./bin/run_setup.sh
+            docker compose up --detach --wait --wait-timeout=10 ci-web
+            docker compose run --rm ci shell bash -c 'cd systemtest && NGINX_TESTS=0 POST_CHECK=1 HOST=http://ci-web:8000 pytest -vv'
+            sed '$d' -i my.env # remove config on last line
+
+      - run:
           name: Push to Dockerhub
           command: |
             bin/circleci_push.sh "local/antenna_deploy_base:latest"
