fix CI and partially address review

--- a/docker/config/local_dev.env
+++ b/docker/config/local_dev.env
@@ -24,9 +24,6 @@ CRASHMOVER_CRASHPUBLISH_SUBSCRIPTION_NAME=local_dev_socorro_sub
 # Set Pub/Sub library to use emulator
 PUBSUB_EMULATOR_HOST=pubsub:5010
 
-# GCS settings
-CRASHMOVER_CRASHSTORAGE_BUCKET_NAME=antennabucket
-
 # Set GCS library to use emulator
 # This has to be an https url or google_cloud_storage won't work
 STORAGE_EMULATOR_HOST=http://gcs-emulator:8001
@@ -36,6 +33,7 @@ CRASHMOVER_CRASHSTORAGE_ENDPOINT_URL=http://localstack:4566
 CRASHMOVER_CRASHSTORAGE_REGION=us-east-1
 CRASHMOVER_CRASHSTORAGE_ACCESS_KEY=foo
 CRASHMOVER_CRASHSTORAGE_SECRET_ACCESS_KEY=foo
+# Used for S3 and GCS
 CRASHMOVER_CRASHSTORAGE_BUCKET_NAME=antennabucket
 
 # SQS settings
