use gcs emulator for gcs tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ max-line-length = 88
 [tool:pytest]
 addopts = -rsxX --tb=native --showlocals
 norecursedirs = .git docs bin
-testpaths = tests/unittest/
+testpaths = tests/
 
 filterwarnings =
     error
