bug-1884404: Fix docker-compose config for Docker Compose v2.24.6

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,6 @@ services:
       - .:/app
 
   devcontainer:
-    extends:
-      service: test
     build:
       dockerfile: .devcontainer/Dockerfile
       args:
@@ -45,6 +43,17 @@ services:
         groupid: ${USE_GID:-10001}
     image: local/antenna-devcontainer
     entrypoint: ["sleep", "inf"]
+    env_file:
+      - docker/config/local_dev.env
+      - docker/config/test.env
+    links:
+      - fakesentry
+      - gcs-emulator
+      - localstack
+      - pubsub
+      - statsd
+    volumes:
+      - .:/app
 
   # Container that we use in CI--it can't volume mount things
   ci:
@@ -62,14 +71,19 @@ services:
 
   # like web but CI can't volume mount things
   ci-web:
-    extends:
-      service: ci
+    image: local/antenna_deploy_base
     env_file:
       # exclude docker/config/test.env because this will be used for systemtest
       # which requires store and publish to actually happen
       - docker/config/local_dev.env
       - my.env
     command: web
+    links:
+      - fakesentry
+      - gcs-emulator
+      - localstack
+      - pubsub
+      - statsd
 
   # Web container is a prod-like fully-functioning Antenna container
   web:
