bug-1891047: fix test setup/teardown for support services
This changes test configuration so it uses different queues and buckets
than the local dev environment.

This fixes setup/teardown for s3 and gcs tests by adding x_client and
x_helper fixtures. Previously the gcs tests did this for every
test--it's better to pull it into a fixture.

This fixes rebuild_app to also reset verify_funs. Previously it didn't
do that, so storage and publish classes would stack up and then tests
would fail.

This fixes test data in two cases where we were passing in the wrong
things.

--- a/docker/config/test.env
+++ b/docker/config/test.env
@@ -1,8 +1,16 @@
 # Test environment
 
-# For tests, the default is the no op classes
+# For tests, default to NoOp classes
 CRASHMOVER_CRASHSTORAGE_CLASS=antenna.ext.crashstorage_base.NoOpCrashStorage
 CRASHMOVER_CRASHPUBLISH_CLASS=antenna.ext.crashpublish_base.NoOpCrashPublish
 
-# Set up fakesentry
-SECRET_SENTRY_DSN=http://public@fakesentry:8090/1
+# Pub/Sub settings
+CRASHMOVER_CRASHPUBLISH_PROJECT_ID=test-dev-socorro
+CRASHMOVER_CRASHPUBLISH_TOPIC_NAME=test_dev_socorro_standard
+CRASHMOVER_CRASHPUBLISH_SUBSCRIPTION_NAME=test_dev_socorro_sub
+
+# Used for S3 and GCS
+CRASHMOVER_CRASHSTORAGE_BUCKET_NAME=testbucket
+
+# SQS settings
+CRASHMOVER_CRASHPUBLISH_QUEUE_NAME=test_dev_socorro_standard
