bug-1891047: attempt to fix systemtests in CI
This fixes systemtests so that run_setup.sh runs with the same
configuration that running antenna uses. Now they all use ci-web.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,19 +80,19 @@ jobs:
       - run:
           name: Run systemtest
           command: |
-            docker compose run --rm ci shell ./bin/run_setup.sh
+            docker compose run --rm ci-web shell ./bin/run_setup.sh
             docker compose up --detach --wait --wait-timeout=10 ci-web
-            docker compose run --rm ci shell bash -c 'cd systemtest && NGINX_TESTS=0 POST_CHECK=1 HOST=http://ci-web:8000 pytest -vv'
+            docker compose run --rm ci-web shell bash -c 'cd systemtest && NGINX_TESTS=0 POST_CHECK=1 HOST=http://ci-web:8000 pytest -vv'
 
       - run:
           name: Run systemtest with pubsub and gcs
           command: |
             echo 'CRASHMOVER_CRASHPUBLISH_CLASS=antenna.ext.pubsub.crashpublish.PubSubCrashPublish' >> my.env
             echo 'CRASHMOVER_CRASHSTORAGE_CLASS=antenna.ext.gcs.crashstorage.GcsCrashStorage' >> my.env
-            docker compose run --rm ci shell ./bin/run_setup.sh
+            docker compose run --rm ci-web shell ./bin/run_setup.sh
             docker compose up --detach --wait --wait-timeout=10 ci-web
             # Use -m "not aws" to select gcp and unmarked tests
-            docker compose run --rm ci shell bash -c 'cd systemtest && NGINX_TESTS=0 POST_CHECK=1 HOST=http://ci-web:8000 pytest -vv -m "not aws"'
+            docker compose run --rm ci-web shell bash -c 'cd systemtest && NGINX_TESTS=0 POST_CHECK=1 HOST=http://ci-web:8000 pytest -vv -m "not aws"'
             # remove config on last two lines
             sed '$d' -i my.env
             sed '$d' -i my.env
