bug-1884212: re-root antenna tests
This re-roots the antenna tests so tests are under tests/ and not
tests/unittest/. The latter implies a test categorization we're not
using and it's confusing.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ docstring-quotes = "double"
 [tool.pytest.ini_options]
 addopts = "-rsxX --tb=native --showlocals -m 'not gcp'"
 norecursedirs = [".git", "docs", "bin"]
-testpaths = "tests/unittest/"
+testpaths = "tests/"
 
 markers = [
     "aws: tests that require aws backends to be configured in the environment. this is the default.",
