bug-1908018: drop support for AWS

--- a/docker/config/local_dev.env
+++ b/docker/config/local_dev.env
@@ -1,4 +1,4 @@
-# prod-like Antenna environment with localstack.
+# prod-like Antenna environment with local emulators.
 #
 # See https://antenna.readthedocs.io/ for documentation.
 
@@ -13,8 +13,8 @@ STATSD_HOST=statsd
 STATSD_NAMESPACE=mcboatface
 
 # Crashmover settings
-CRASHMOVER_CRASHSTORAGE_CLASS=antenna.ext.s3.crashstorage.S3CrashStorage
-CRASHMOVER_CRASHPUBLISH_CLASS=antenna.ext.sqs.crashpublish.SQSCrashPublish
+CRASHMOVER_CRASHSTORAGE_CLASS=antenna.ext.gcs.crashstorage.GcsCrashStorage
+CRASHMOVER_CRASHPUBLISH_CLASS=antenna.ext.pubsub.crashpublish.PubSubCrashPublish
 
 # Pub/Sub settings
 CRASHMOVER_CRASHPUBLISH_PROJECT_ID=local-dev-socorro
@@ -27,20 +27,8 @@ PUBSUB_EMULATOR_HOST=pubsub:5010
 # Set GCS library to use emulator
 STORAGE_EMULATOR_HOST=http://gcs-emulator:8001
 
-# S3 settings
-CRASHMOVER_CRASHSTORAGE_ENDPOINT_URL=http://localstack:4566
-CRASHMOVER_CRASHSTORAGE_REGION=us-east-1
-CRASHMOVER_CRASHSTORAGE_ACCESS_KEY=foo
-CRASHMOVER_CRASHSTORAGE_SECRET_ACCESS_KEY=foo
-# Used for S3 and GCS
+# GCS settings
 CRASHMOVER_CRASHSTORAGE_BUCKET_NAME=antennabucket
-
-# SQS settings
-CRASHMOVER_CRASHPUBLISH_ENDPOINT_URL=http://localstack:4566
-CRASHMOVER_CRASHPUBLISH_REGION=us-east-1
-CRASHMOVER_CRASHPUBLISH_ACCESS_KEY=foo
-CRASHMOVER_CRASHPUBLISH_SECRET_ACCESS_KEY=foo
-CRASHMOVER_CRASHPUBLISH_QUEUE_NAME=local_dev_socorro_standard
 
 # Set up fakesentry
 SECRET_SENTRY_DSN=http://public@fakesentry:8090/1
