--- a/docker/config/test.env
+++ b/docker/config/test.env
@@ -9,8 +9,5 @@ CRASHMOVER_CRASHPUBLISH_PROJECT_ID=test-dev-socorro
 CRASHMOVER_CRASHPUBLISH_TOPIC_NAME=test_dev_socorro_standard
 CRASHMOVER_CRASHPUBLISH_SUBSCRIPTION_NAME=test_dev_socorro_sub
 
-# Used for S3 and GCS
+# GCS settings
 CRASHMOVER_CRASHSTORAGE_BUCKET_NAME=testbucket
-
-# SQS settings
-CRASHMOVER_CRASHPUBLISH_QUEUE_NAME=test_dev_socorro_standard
