--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -18,6 +18,9 @@ jobs:
       deployments: write
       id-token: write
     runs-on: ubuntu-latest
+    env:
+      # Disable docker compose volume mounts in docker-compose.override.yml
+      COMPOSE_FILE: docker-compose.yml
     steps:
       - uses: actions/checkout@v4
       - name: Get info
@@ -39,20 +42,20 @@ jobs:
         run: make build
       - name: Verify requirements.txt contains correct dependencies
         run: |
-          docker compose run --rm --no-deps ci shell ./bin/run_verify_reqs.sh
+          docker compose run --rm --no-deps test shell ./bin/run_verify_reqs.sh
       - name: Run lint check
         run: |
           make my.env
-          docker compose run --rm --no-deps ci shell ./bin/run_lint.sh
+          docker compose run --rm --no-deps test shell ./bin/run_lint.sh
       - name: Run tests
         run: |
           make my.env
-          docker compose run --rm ci shell ./bin/run_tests.sh
+          docker compose run --rm test shell ./bin/run_tests.sh
       - name: Run systemtest
         run: |
-          docker compose run --rm ci-web shell ./bin/run_setup.sh
-          docker compose up --detach --wait --wait-timeout=10 ci-web
-          docker compose run --rm ci-web shell bash -c 'cd systemtest && NGINX_TESTS=0 POST_CHECK=1 HOST=http://ci-web:8000 pytest -vv'
+          make setup
+          docker compose up --detach --wait --wait-timeout=10 web
+          docker compose run --rm web shell systemtest/test_env.sh local
 
       - name: Set Docker image tag to "latest" for updates of the main branch
         if: github.ref == 'refs/heads/main'
