--- a/requirements.in
+++ b/requirements.in
@@ -1,6 +1,5 @@
 # Production requirements
 attrs==23.2.0
-datadog==0.49.1
 dockerflow==2024.4.2
 everett==3.3.0
 falcon==3.1.3
@@ -8,7 +7,7 @@ fillmore==2.0.0
 google-cloud-storage==2.18.0
 gunicorn==22.0.0
 isodate==0.6.1
-markus==4.2.0
+markus[datadog]==5.0.0
 sentry-sdk==2.8.0
 google-cloud-pubsub==2.23.0
 
