bug-1906108: change sentry_scrub_error metric
This changes the sentry_scrub_error metric to use the
``socorro.sentry_scrub_error`` key and pass the service as a tag. This
matches what we're changing the other Socorro services to do.

--- a/antenna/statsd_metrics.yaml
+++ b/antenna/statsd_metrics.yaml
@@ -3,10 +3,14 @@
 # When adding a new metric, make sure to add it here first.
 ---
 
-socorro.collector.sentry_scrub_error:
+socorro.sentry_scrub_error:
   type: "incr"
   description: |
     Emitted every time there was an error in the Sentry event scrubbing code.
+
+    Tags:
+
+    * ``service``: ``collector``
 
 socorro.collector.breakpad_resource.gzipped_crash:
   type: "incr"
