OBS-375: Document how to upgrade to a new Python version.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
-# This should be kept in sync with the python version used in .devcontainer/Dockerfile and
-# docker/images/fakesentry/Dockerfile
+# NOTE(smarnach): To upgrade Python to a new minor or major version, see
+# https://antenna.readthedocs.io/en/latest/dev.html#upgrading-to-a-new-python-version
 FROM --platform=linux/amd64 python:3.11.10-slim-bullseye@sha256:f6a64ef0a5cc14855b15548056a8fc77f4c3526b79883fa6709a8e23f676ac34
 
 # Set up user and group
