--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,8 +67,9 @@ services:
   # https://cloud.google.com/sdk/docs/downloads-docker
   # official pubsub emulator
   pubsub:
-    # also available as google/cloud-sdk:<version>-emulators
-    image: gcr.io/google.com/cloudsdktool/google-cloud-cli:463.0.0-emulators
+    build:
+      context: docker/images/pubsub-emulator
+    image: local/antenna-pubsub-emulator
     command:
       - gcloud
       - beta
@@ -83,7 +84,9 @@ services:
   # https://hub.docker.com/r/kamon/grafana_graphite/
   # username: admin, password: admin
   statsd:
-    image: kamon/grafana_graphite
+    build:
+      context: docker/images/grafana
+    image: local/antenna-grafana
     ports:
       - "${EXPOSE_GRAFANA_PORT:-9000}:3000"
 
